--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,31 @@
 *.class
 *.log
+
+# sbt specific
+.cache
+.cache-main
+.cache-tests
+.history
+.lib/
+dist/*
+target/
+lib_managed/
+src_managed/
+project/boot/
+project/plugins/project/
+
+# Scala-IDE specific
+.scala_dependencies
+.worksheet
+.classpath
+.project
+.idea
+.settings/
+/bin/
+docker/docker-compose/target
+docker/docker-compose/data
+docker/docker-compose/docker-compose.yaml.original
+.key
+nodes.json
+nodes.json.bak
+
