Add snapshots to LinkActor persistence

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -42,6 +42,8 @@ akka {
     seed-nodes = ["akka.tcp://"${play.akka.actor-system}"@127.0.0.1:2551"]
     debug.verbose-gossip-logging = on
     downing-provider-class = "tanukki.akka.cluster.autodown.OldestAutoDowning"
+
+    sharding.distributed-data.durable.lmdb.dir = "ddata-sharding"
     sharding.remember-entities = true
     sharding.least-shard-allocation-strategy.rebalance-threshold = 5
   }
