Create a skeleton ClientApp object to model a client application

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -39,20 +39,24 @@ akka {
   }
 
   cluster {
+    roles = ["broker"]
+
     seed-nodes = ["akka.tcp://"${play.akka.actor-system}"@127.0.0.1:2551"]
     debug.verbose-gossip-logging = on
     downing-provider-class = "tanukki.akka.cluster.autodown.OldestAutoDowning"
 
-    sharding.distributed-data.durable.lmdb.dir = "ddata-sharding"
-    sharding.remember-entities = true
-    sharding.least-shard-allocation-strategy.rebalance-threshold = 5
+    sharding {
+      distributed-data.durable.lmdb.dir = "ddata-sharding"
+      remember-entities = true
+      least-shard-allocation-strategy.rebalance-threshold = 5
+    }
   }
 
   persistence {
-#    journal.plugin = "casbah-journal"
-#    snapshot-store.plugin = "casbah-snapshot"
-    journal.plugin = "akka.persistence.journal.inmem"
-    snapshot-store.plugin = "akka.persistence.snapshot-store.local"
+    journal.plugin = "casbah-journal"
+    snapshot-store.plugin = "casbah-snapshot"
+#    journal.plugin = "akka.persistence.journal.inmem"
+#    snapshot-store.plugin = "akka.persistence.snapshot-store.local"
   }
 }
 
@@ -60,8 +64,8 @@ custom-downing {
   stable-after = 20s
 
   oldest-auto-downing {
-    oldest-member-role = ""
-    down-if-alone = true
+    oldest-member-role = "broker"
+    down-if-alone = false
   }
 }
 
