Refactor client actors into a separate module

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,6 +1,7 @@
 akka-hub {
   shard.name = "links"
   shard.count = 10
+
   link.inactivity.timeout = 600 seconds
   link.snapshot.interval = 100
   link.view.maxRows = 100
@@ -53,10 +54,10 @@ akka {
   }
 
   persistence {
-    journal.plugin = "casbah-journal"
-    snapshot-store.plugin = "casbah-snapshot"
-#    journal.plugin = "akka.persistence.journal.inmem"
-#    snapshot-store.plugin = "akka.persistence.snapshot-store.local"
+#    journal.plugin = "casbah-journal"
+#    snapshot-store.plugin = "casbah-snapshot"
+    journal.plugin = "akka.persistence.journal.inmem"
+    snapshot-store.plugin = "akka.persistence.snapshot-store.local"
   }
 }
 
