--- a/conf/client.conf
+++ b/conf/client.conf
@@ -1,7 +1,10 @@
 include "application.conf"
 
-akka {
+application.router = client.Routes
 
+client.reconnect.timeout = 5 seconds
+
+akka {
   remote.netty.tcp.port = 2550
 
   cluster {
@@ -14,4 +17,9 @@ akka {
       "akka.tcp://"${play.akka.actor-system}"@broker5:2555"
     ]
   }
+}
+
+play {
+  modules.disabled  += "models.MainModule"
+  modules.enabled  += "client.ClientModule"
 }
