--- a/conf/client.conf
+++ b/conf/client.conf
@@ -9,13 +9,7 @@ akka {
 
   cluster {
     roles = ["client"]
-    seed-nodes = [
-      "akka.tcp://"${play.akka.actor-system}"@broker1:2551",
-      "akka.tcp://"${play.akka.actor-system}"@broker2:2551",
-      "akka.tcp://"${play.akka.actor-system}"@broker3:2551",
-      "akka.tcp://"${play.akka.actor-system}"@broker4:2551",
-      "akka.tcp://"${play.akka.actor-system}"@broker5:2551"
-    ]
+    seed-nodes = ["akka.tcp://"${play.akka.actor-system}"@127.0.0.1:2551"]
   }
 }
 
